fix: fix vertical alignment of avatar

--- a/content/style.css
+++ b/content/style.css
@@ -408,10 +408,10 @@ h6 [href^="#"]:focus {
 
 .avatar {
   float: right;
-  margin-left: 1.5rem;
-  margin-top: 0;
   shape-outside: circle(calc(50% + 1.5rem)) padding-box;
   width: 20%;
   min-width: 6rem;
+  margin-left: 1.5rem;
   margin-bottom: 1.5rem;
+  margin-top: 0.375rem;
 }
